--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": false,
-  "homepage":"https://PierricM.github.io/AceSocial",
+  "homepage":".",
   "scripts": {
     "serve": "vue-cli-service serve",
     "serve:devnet": "vue-cli-service serve --mode devnet",
